--- a/index.html
+++ b/index.html
@@ -55,6 +55,67 @@ body {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
 }
+
+/* Styles for PlacementGizmo */
+.placement-gizmo {
+  position: absolute;
+  cursor: move;
+  z-index: 30; /* Above image uploader but below modals */
+  user-select: none;
+  -webkit-user-select: none;
+}
+.placement-gizmo__content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border: 2px solid rgba(37, 99, 235, 0.8); /* a shade of blue */
+  box-shadow: 0 0 15px rgba(37, 99, 235, 0.5);
+}
+.placement-gizmo__image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  pointer-events: none;
+}
+.placement-gizmo__handle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border: 2px solid rgba(37, 99, 235, 0.9);
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  z-index: 31;
+}
+.placement-gizmo__handle--scale {
+  bottom: -10px;
+  right: -10px;
+  cursor: nwse-resize;
+}
+.placement-gizmo__actions {
+  position: absolute;
+  bottom: -45px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 8px;
+  padding: 6px;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 9999px;
+  backdrop-filter: blur(5px);
+  align-items: center;
+}
+.placement-gizmo__button {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
 </style>
 <link rel="stylesheet" href="/index.css">
 </head>
